# bump

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeModules/: BumpMacroUtils.cmake  FindBoost.cmake  FindBump.cmake
doc/: doxyfile.cmake
examples/: CMakeLists.txt
examples/bumpAutoTimer/: CMakeLists.txt  bumpAutoTimer.cpp  main.cpp
examples/bumpEnvironment/: CMakeLists.txt  bumpEnvironment.cpp  main.cpp
examples/bumpExceptions/: CMakeLists.txt  bumpExceptions.cpp  main.cpp
examples/bumpFileInfo/: CMakeLists.txt  bumpFileInfo.cpp  main.cpp
examples/bumpFileSystem/: CMakeLists.txt  bumpFileSystem.cpp  main.cpp
examples/bumpLog/: CMakeLists.txt  bumpLog.cpp  main.cpp
examples/bumpNotifications/: CMakeLists.txt  bumpNotifications.cpp  main.cpp
examples/bumpStrings/: CMakeLists.txt  bumpStrings.cpp  main.cpp
examples/bumpTimeline/: CMakeLists.txt  bumpTimeline.cpp  main.cpp
examples/bumpTimer/: CMakeLists.txt  bumpTimer.cpp  main.cpp
examples/bumpUuids/: CMakeLists.txt  bumpUuids.cpp  main.cpp
include/bump/: AutoTimer.h  CryptographicHash.h  Environment.h  Exception.h  Export.h  FileInfo.h  FileSystem.h  FileSystemError.h  InvalidArgumentError.h  Log.h  Log_impl.h  NotImplementedError.h  NotificationCenter.h  NotificationCenter_impl.h  NotificationError.h  OutOfRangeError.h  Singleton.h  SingletonError.h  String.h  StringSearchError.h  TextFileReader.h  Timeline.h  Timer.h  TypeCastError.h  Uuid.h  Version.h  bump.h
src/: CMakeLists.txt
src/bump/: AutoTimer.cpp  CMakeLists.txt  CryptographicHash.cpp  Environment.cpp  Environment_unix.cpp  Environment_win.cpp  Exception.cpp  FileInfo.cpp  FileInfo_unix.cpp  FileInfo_win.cpp  FileSystem.cpp  FileSystemError.cpp  FileSystem_unix.cpp  FileSystem_win.cpp  InvalidArgumentError.cpp  Log.cpp  NotImplementedError.cpp  NotificationCenter.cpp  NotificationError.cpp  OutOfRangeError.cpp  SingletonError.cpp  String.cpp  StringSearchError.cpp  TextFileReader.cpp  Timeline.cpp  Timer.cpp  TypeCastError.cpp  Uuid.cpp  Version.cpp  Version.in
src/smallsha1/: sha1.cpp
tests/: CMakeLists.txt
tests/bumpAllTests/: CMakeLists.txt
tests/bumpCryptographicHashTests/: CMakeLists.txt  CryptographicHashTest.cpp
tests/bumpEnvironmentTests/: CMakeLists.txt  EnvironmentTest.cpp
tests/bumpFileInfoTests/: CMakeLists.txt  FileInfoTest.cpp  FileInfoTest.h  FileInfoTest_unix.cpp  FileInfoTest_win.cpp
tests/bumpFileSystemTests/: CMakeLists.txt  FileSystemTest.cpp  FileSystemTest.h  FileSystemTest_unix.cpp  FileSystemTest_win.cpp
tests/bumpNotificationTests/: CMakeLists.txt  NotificationTest.cpp
tests/bumpStringTests/: CMakeLists.txt  StringTest.cpp  main.cpp
tests/bumpTest/: BaseTest.h  EnvironmentFixture.h  main.cpp
tests/bumpTextFileReaderTests/: CMakeLists.txt  TextFileReaderTest.cpp
tests/bumpUuidTests/: CMakeLists.txt  UuidTest.cpp  main.cpp
